Fixed wonky gap on groups

--- a/css/estadisticas.css
+++ b/css/estadisticas.css
@@ -76,6 +76,7 @@ header a {
     display:flex;
     flex-wrap: wrap;
     gap:10px;
+    JUSTIFY-CONTENT: SPACE-BETWEEN;
 }
 
 .ggrupo {
@@ -205,7 +206,6 @@ header a {
     .s-grupos {
         width: 100%!important;
         order: 1!important;
-        justify-content: space-between!important;
     }
 
     .ggrupo {
